z-indexes fixed

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,7 +8,7 @@
 }
 
 #sidebar { 
-    z-index: 9900000;
+    z-index: 10;
      min-width: 350px;
      max-width: 350px;
     // min-height: 100vh;
