--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,7 +1,7 @@
 .footer{
     overflow: hidden; 
     color:#fff;
-    z-index: 2000; 
+    z-index: 11; 
     bottom: 0vh; 
     left: 0; 
     width: 100%;
