--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -1,7 +1,7 @@
 .nav-wrap{
     position: fixed;
      top: 0; 
-     z-index: 2000;
+     z-index: 9;
      background-image: linear-gradient(rgba(0,0,0,0.4), transparent);
      width: 100%;
 }
